--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,16 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  min-height: 75rem;
+  padding-top: 4.5rem;
 }
 
 a {
   color: #00B7FF;
+}
+#nav{
+  font-size:16px;
+  color:white;
+}
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
