--- a/views/homePage.hbs
+++ b/views/homePage.hbs
@@ -14,12 +14,12 @@
     </div>
 </nav>
 <main role="main" class="container">
-    <div class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner" role="listbox" style="  max-height: 40em; width: 100%; height: 100%; object-fit: cover; overflow: hidden !important;">
-            <div class="carousel-item active"></div>
+    <div class="carousel slide" data-ride="carousel" style="max-width: 680px; hight:30rem; margin: auto;">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active" style="style: padding-bottom: 30rem;" ><div class="container"></div></div>
             {{#each poducts}}
             <div class="carousel-item">
-                <img class="d-block w-100" src="/{{this.image}}" alt="slide">
+                <img class="d-block w-100" style="margin: auto;" src="/{{this.image}}" alt="slide">
             </div>
             {{/each}}
         </div>
@@ -32,7 +32,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <div class="card-columns mt-4">
+    <div class="card-columns mt-4" >
         {{#each poducts}}
         <div class="card" style="witdth: 8rem;">
             <img class="card-img-top" src="/{{this.image}}" alt="{{this.name}}">
@@ -40,7 +40,7 @@
                 <h5 class="card-title">{{this.name}}</h5>
                 <p class="card-text">{{this.description}}</p>
                 <label>{{this.price}} </label>
-                <a href="" class="card-link pull-right"><i class="fas fa-cart-plus"></i>Add Cart</a>
+                <a href="login" class="card-link pull-right"><i class="fas fa-cart-plus"></i>Add Cart</a>
             </div>
         </div>
         {{/each}}
