--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -10,24 +10,35 @@
             <li class="nav-item"><a class="nav-link" href="menu">Menu</a></li>
             <li class="nav-item"><a class="nav-link" href="order">Order</a></li>
         </ul>
-    <a class="nav-link" href="cart" ><i class="fas fa-shopping-cart" id="nav"><div class="d-inline ml-1" id="cartCount">{{cartCount}}</div></i></a>
-    <a class="nav-link" href="logout" id="nav"><i class="fas fa-sign-out-alt"></i> Log Out</a>
+        <a class="nav-link" href="cart"><i class="fas fa-shopping-cart" id="nav">
+                <div class="d-inline ml-1" id="cartCount">{{cartCount}}</div>
+            </i></a>
+        <a class="nav-link" href="logout" id="nav"><i class="fas fa-sign-out-alt"></i> Log Out</a>
     </div>
 </nav>
 <main role="main" class="container">
-        {{#each cart}}
-        <div class="jumbotron">
-                <h5 class="card-title">{{this.name}}</h5>
-                <label>quantity</label>
-                <input style="width: 40px;" type="number" name="{{this.id}}" value="{{this.quantity}}" id="{{this.id}}"></input>
-                <label style="pull: right">${{this.price}} </label>
-                <button type="button" class="btn btn-link" onclick="addCart({{this.id}}, document.getElementById('{{this.id}}').value*1)"><i class="fas fa-cart-plus"></i>Add Cart</button>
-                <div>
-                    <label>Subtotal</label>
-                    <label>${{this.subTotal}}</label>
-                </div>
+    <div class="totalPrice">
+        <div class="pull-left" id="totalPrice">Total price is ${{totalPrice}}</div>
+        <div class="pull-right"><button type="button" style="" class="btn btn-link" onclick="">Please Order</button></div>
+    </div>
+
+
+    {{#each cart}}
+    <div class="jumbotron aa">
+        <h5 class="card-title">{{this.name}}</h5>
+        <p>{{this.customdetail}}</p>
+        <label>quantity</label>
+        <input style="width: 40px;" oninput="timmer({{this.cart_id}})" type="number" name="{{this.cart_id}}" value="{{this.quantity}}" id="{{this.cart_id}}"></input>
+        <label style="pull: right">${{this.price}} </label>
+        <button type="button" class="btn btn-link"
+            onclick="addCart({{this.cart_id}}, document.getElementById('{{this.cart_id}}').value*1)"><i
+                class="fas fa-cart-plus"></i>Add Cart</button>
+        <div>
+            <label>Subtotal</label>
+            <label id="subTotal{{this.cart_id}}">${{this.subTotal}}</label>
         </div>
-        {{/each}}
+    </div>
+    {{/each}}
 </main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/active.js"></script>
