--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -19,7 +19,7 @@
 <main role="main" class="container">
     <div class="totalPrice">
         <div class="pull-left" id="totalPrice">Total price is ${{totalPrice}}</div>
-        <div class="pull-right"><button type="button" style="" class="btn btn-link" onclick="">Please Order</button>
+        <div class="pull-right"><button type="button" style="" class="btn btn-link" onclick="placeOrder()">Place Order</button>
         </div>
     </div>
 
