--- a/views/order.hbs
+++ b/views/order.hbs
@@ -10,16 +10,31 @@
             <li class="nav-item"><a class="nav-link" href="menu">Menu</a></li>
             <li class="nav-item active"><a class="nav-link" href="order">Order</a></li>
         </ul>
-    <a class="nav-link" href="cart" ><i class="fas fa-shopping-cart" id="nav"><div class="d-inline ml-1" id="cartCount">{{cartCount}}</div></i></a>
-    <a class="nav-link" href="logout" id="nav"><i class="fas fa-sign-out-alt"></i> Log Out</a>
+        <a class="nav-link" href="cart"><i class="fas fa-shopping-cart" id="nav">
+                <div class="d-inline ml-1" id="cartCount">{{cartCount}}</div>
+            </i></a>
+        <a class="nav-link" href="logout" id="nav"><i class="fas fa-sign-out-alt"></i> Log Out</a>
     </div>
 </nav>
 
 
 <main role="main" class="container">
-          {{#each order}}
-      <div class="jumbotron">
-          <div><label>Order Number</label></div>
-      </div>
-          {{/each}}
+    {{#each order}}
+    <div class="jumbotron" style="display: flex;">
+        <div>
+            <label >Order Number: {{this.id}}</label>
+            <label> Total Price: ${{this.totalPrice}}</label>
+            
+        </div>
+        {{#each this.order}}
+        <div class="float-left" style="padding: 10px;">
+            <h5>{{this.name}}</h5>
+            {{#if this.custom}}
+            <div>Custom: {{this.custom}}</div>
+            {{/if}}
+            <div>Quantity{{this.quantity}} Price: {{this.price}}</div>
+        </div>
+        {{/each}}
+    </div>
+    {{/each}}
 </main>
