--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -19,7 +19,7 @@
 <main role="main" class="container">
     <div class="card-columns">
         {{#each poducts}}
-        <div class="card" style="witdth: 8rem;">
+        <div class="card">
             <img class="card-img-top" src="/{{this.image}}" alt="{{this.name}}">
             <div class="card-body">
                 <h5 class="card-title">{{this.name}}</h5>
