--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -41,6 +41,8 @@
                 <h5 class="card-title">Custom Pizza</h5>
                 <p class="card-text">
                     {{#each customizations}}
+                    <div id="customOption" >
+                    </div>
                     <div>
                         <input type="checkbox" name="" id="" value="{{this.id}}">
                         <label>{{this.name}}</label>
