--- a/views/order.hbs
+++ b/views/order.hbs
@@ -35,7 +35,8 @@
                 {{#if this.custom}}
                 <div>Custom: {{this.custom}}</div>
                 {{/if}}
-                <div>Quantity{{this.quantity}} Price: {{this.price}}</div>
+                <div>Quantity: {{this.quantity}}</div>
+                <div>Subtotal: {{this.price}}</div>
             </div>
             {{/each}}
         </div>
